# gtgen

./: .clang-format  .clang-tidy  .codacy.yml  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile.in  LICENSE  NOTICE  README.md  _abstract_code_parser_8h_source.html  _abstract_test_harness_8h_source.html  _code_analyzer_interface_8h_source.html  _code_analyzer_result_storage_8h_source.html  _code_generator_8h_source.html  _code_parser_cpp_ast_8h_source.html  _function_analyzer_cpp_ast_8h_source.html  _function_attribute_8h_source.html  _function_attribute_decorator_8h_source.html  _function_info_8h_source.html  _function_parser_8h_source.html  _function_parser_cpp_ast_8h_source.html  _function_parser_impl_8h_source.html  _google_mock_harness_8h_source.html  _include_analyzer_cpp_ast_8h_source.html  _include_info_8h_source.html  _scope_info_8h_source.html  _scope_relation_analyzer_cpp_ast_8h_source.html  _scope_relation_parser_8h_source.html  _scope_relation_parser_impl_8h_source.html  _test_target_viewer_harness_8h_source.html  annotated.html  annotated_dup.js  class_abstract_code_parser-members.html  class_abstract_code_parser.html  class_abstract_code_parser.js  class_abstract_code_parser__coll__graph.map  class_abstract_code_parser__coll__graph.md5  class_abstract_code_parser__inherit__graph.map  class_abstract_code_parser__inherit__graph.md5  (+239 more)
app/: main.cpp
examples/: CMakeLists.txt
examples/class_function/: code1.h  code2.h  mock_code2_generated_by_gtgen.h  test_code.cpp
examples/class_inherit_function/: code1.h  code2.h  mock_code2.h  mock_code2_generated_by_gtgen.h  test_code.cpp
examples/cmake/: Googletest.cmake  examples.cmake
examples/free_function/: code1.h  code2.h  mock_code2.h  test_code.cpp
examples/namespace_function/: code1.h  code2.h  mock_code2.h  test_code.cpp
include/: AbstractCodeParser.h  AbstractTestHarness.h  CodeAnalyzerInterface.h  (+15 more)
(+115 files in other folders)
